# alchemy

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  license.txt  readme.md
res/: toolchain.cmake
src/: alchemy.cpp  alchemy.hpp  main.cpp  main.hpp
